# ML_ISA_ai_tools

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
ai_tools/: __init__.py  config.py  translator.py
ai_tools/antiplagiat/: antiplagiat_check.py
ai_tools/antiplagiat/models/: advego_antiplagiat.py  antiplagiat_ru.py
ai_tools/grammar_check/: grammar_check.py
ai_tools/note_cover_gen/models/: kandinsky3.1_api.py
ai_tools/note_processing/: create_llm_session.py
ai_tools/note_processing/llm_model/: __init__.py  llm_prompts.py
ai_tools/note_processing/llm_model/models/mistral_ai/: mistral_ai_api.py
tests/: test_ai_tools.py
